--- a/test-output/old/IMSD-Suite/classes.html
+++ b/test-output/old/IMSD-Suite/classes.html
@@ -37,6 +37,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyMyAssignmentsPageTitleTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>clickMyAssignmentsLinkTest</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -57,6 +61,10 @@
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAssignBookingsPageTitleTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>clickMyAssignmentsLinkTest</td>
@@ -84,6 +92,10 @@
 <td>clickAssignBookingsLinkTest</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>verifyContactsPageTitleTest</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
@@ -103,7 +115,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickGroupedBookingsLinkTest</td>
+<td>clickAddBookingLinkTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyGroupedBookingsPageTitleTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -123,6 +139,10 @@
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyBookingSearchPageTitleTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>clickGroupedBookingslinkTest</td>
@@ -170,6 +190,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>clickContactsLinkTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAddBookingPageTitleTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
